--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,18 @@
 {
-    "version" : 2,
-    "build" : [
+    "version": 2,
+    "builds": [
         {
-            "src" : "transcription.py",
-            "use" : "@vercel/python",
-            "config" : {"runtime" : "python3.12.1"}
-         }
+            "src": "transcription.py",
+            "use": "@vercel/python",
+            "config": {
+                "runtime": "python3.12"
+            }
+        }
     ],
-    "routes" : [
+    "routes": [
         {
-            "src" : "/(.*)",
-            "dest" : "/"
+            "src": "/(.*)",
+            "dest": "/"
         }
     ]
 }
