--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Flask==3.0.1
 pydub==0.25.1
-pocketsphinx==0.1.15
+pocketsphinx==5.0.3
 transformers==4.37.2
-opencv-python==4.5.5.62
+opencv-python==4.9.0fla
